fix some misalignments with the s&f grid styling, remove cookies.php (as it's filter was from a deleted plugin and it wouldn't be called anymore)

--- a/wp-content/themes/makerfaire/less/search-and-filter.less
+++ b/wp-content/themes/makerfaire/less/search-and-filter.less
@@ -344,6 +344,8 @@ form.searchandfilter {
 						font-family: "Roboto Bold";
 						text-transform: capitalize;
 						color: #333;
+                        min-height: 2em;
+                        line-height: 1.25em;
 						@media screen and (max-width: 600px) {
 							font-size: 22px;
 						}
@@ -418,14 +420,7 @@ form.searchandfilter {
                     }
                 }
                 .results-text {
-                    h2 a {
-                        min-height: 2em;
-						line-height: 1.4em;
-                    }
                     .result-detail {
-                        &:first-of-type {
-                            margin-top: auto;
-                        }
                         &.desc {
                             min-height: 4.5em;
                             margin-bottom: 25px;
